samples/_failures_safe/1761648061_c1eeca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2eb88884.c: In function ‘next_token’:
./samples/SAFE/__tmp_2eb88884.c:165: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_2eb88884.c:164:9: error: expected declaration or statement at end of input
  164 |         if
      |         ^~
./samples/SAFE/__tmp_2eb88884.c:164:9: error: expected declaration or statement at end of input
